# mcp_data_gov_in

./: .gitignore  CLIENT_SIDE_FILTERING_FIX.md  Dockerfile  HYBRID_FILTERING_UPDATE.md  IMPLEMENTATION_SUMMARY.md  README.md  SMITHERY_DEPLOYMENT.md  build_embeddings.py  config.json  config_loader.py  download_model.py  environment.yml  learning_mcp.md  mcp_server.py  pyproject.toml  rate_limiter.py  security_utils.py  semantic_search.py  setup.py  smithery.yaml  test.http  test_clean_responses.py  test_filtering_fix.py  test_semantic_search.py  test_server_side_filtering.py  test_smithery_deployment.py
.github/instructions/: general_instructions.instructions.md
.github/workflows/: ci.yml
app/: main.py  portal_client.py  schemas.py  tools.py
data/: data_gov_in_api_registry.json  embeddings.pkl  metadata.pkl
examples/: hiv_analysis_prompt.md
tests/: test_rate_limiter.py  test_security_utils.py  test_tools.py
